feat: add user endpoints
